--- a/.travis.yml
+++ b/.travis.yml
@@ -35,4 +35,4 @@ before_script:
   - echo "(defsystem :dummy-cl-travis-system)" > ~/lisp/dummy-cl-travis-system.asd
 
 script:
-  - cl --load testscr.lisp | grep '/Fail: 0/'
+  - cl --load testscr.lisp | grep 'Fail\: 0'
